Switch to strict requirements

--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -21,5 +21,6 @@ parts:
       - rustc
       - cargo
       - pkg-config
+    charm-strict-dependencies: true
     charm-binary-python-packages:
-      - psycopg2-binary==2.9.9  # renovate
+      - psycopg2-binary
