--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ allowlist_externals =
     charmcraft
     mv
 commands_pre =
-    poetry export --only main,charm-libs --output requirements.txt --without-hashes
+    poetry export --only main,charm-libs --output requirements.txt
 commands =
     build: charmcraft pack {posargs}
 commands_post =
