--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ jsonschema = "^4.20.0"
 jinja2 = "^3.1.2"
 lightkube = "^0.15.0"
 lightkube-models = "^1.28.1.4"
-# psycopg2 = "^2.9.9" # Injected in charmcraft.yaml
+psycopg2-binary = "^2.9.9"
 
 [tool.poetry.group.charm-libs.dependencies]
 # data_platform_libs/v0/data_interfaces.py
@@ -70,10 +70,10 @@ optional = true
 [tool.poetry.group.integration.dependencies]
 lightkube = "^0.15.0"
 pytest = "^7.4.4"
-pytest-github-secrets = {git = "https://github.com/canonical/data-platform-workflows", tag = "v7.0.0", subdirectory = "python/pytest_plugins/github_secrets"}
+pytest-github-secrets = {git = "https://github.com/canonical/data-platform-workflows", tag = "v8.0.0", subdirectory = "python/pytest_plugins/github_secrets"}
 pytest-operator = "^0.31.1"
-pytest-operator-cache = {git = "https://github.com/canonical/data-platform-workflows", tag = "v7.0.0", subdirectory = "python/pytest_plugins/pytest_operator_cache"}
-pytest-operator-groups = {git = "https://github.com/canonical/data-platform-workflows", tag = "v7.0.0", subdirectory = "python/pytest_plugins/pytest_operator_groups"}
+pytest-operator-cache = {git = "https://github.com/canonical/data-platform-workflows", tag = "v8.0.0", subdirectory = "python/pytest_plugins/pytest_operator_cache"}
+pytest-operator-groups = {git = "https://github.com/canonical/data-platform-workflows", tag = "v8.0.0", subdirectory = "python/pytest_plugins/pytest_operator_groups"}
 juju = "^3.2.2"
 psycopg2 = {version = "^2.9.9", extras = ["binary"]}
 boto3 = "^1.34.11"
