Switch to dpw 9

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,8 +19,6 @@ jobs:
     name: Tests
     uses: ./.github/workflows/ci.yaml
     secrets: inherit
-    permissions:
-      actions: write  # Needed to manage GitHub Actions cache
 
   release-libraries:
     name: Release libraries
@@ -33,6 +31,17 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Set up environment
+        run: |
+          pipx install tox
+          pipx install poetry
+          pipx inject poetry poetry-plugin-export
+          # TODO: Remove after https://github.com/python-poetry/poetry/pull/5980 is closed
+          poetry config warnings.export false
+      - name: Generate requirements
+        run: |
+          tox run -e pack-wrapper
+          mv requirements-last-build.txt requirements.txt
       - name: Release charm libraries
         uses: canonical/charming-actions/release-libraries@2.4.0
         with:
@@ -41,14 +50,14 @@ jobs:
 
   build:
     name: Build charm
-    uses: canonical/data-platform-workflows/.github/workflows/build_charm_without_cache.yaml@v8.0.0
+    uses: canonical/data-platform-workflows/.github/workflows/build_charm_without_cache.yaml@v9.0.2
 
   release:
     name: Release charm
     needs:
       - ci-tests
       - build
-    uses: canonical/data-platform-workflows/.github/workflows/release_charm.yaml@v8.0.0
+    uses: canonical/data-platform-workflows/.github/workflows/release_charm.yaml@v9.0.2
     with:
       channel: 14/edge
       artifact-name: ${{ needs.build.outputs.artifact-name }}
