--- a/tox.ini
+++ b/tox.ini
@@ -18,18 +18,20 @@ set_env =
 allowlist_externals =
     poetry
 
-[testenv:{build,pack-wrapper}]
+[testenv:build-{production,dev,wrapper}]
 # Wrap `charmcraft pack`
 pass_env =
-    CRAFT_SHARED_CACHE
+    CI
 allowlist_externals =
     {[testenv]allowlist_externals}
     charmcraft
+    charmcraftcache
     mv
 commands_pre =
     poetry export --only main,charm-libs --output requirements.txt
 commands =
-    build: charmcraft pack {posargs}
+    build-production: charmcraft pack {posargs}
+    build-dev: charmcraftcache pack {posargs}
 commands_post =
     mv requirements.txt requirements-last-build.txt
 
@@ -80,11 +82,11 @@ pass_env =
     GITHUB_OUTPUT
     SECRETS_FROM_GITHUB
 allowlist_externals =
-    {[testenv:pack-wrapper]allowlist_externals}
+    {[testenv:build-wrapper]allowlist_externals}
 commands_pre =
     poetry install --only integration --no-root
-    {[testenv:pack-wrapper]commands_pre}
+    {[testenv:build-wrapper]commands_pre}
 commands =
     poetry run pytest -v --tb native --log-cli-level=INFO -s --ignore={[vars]tests_path}/unit/ {posargs}
 commands_post =
-    {[testenv:pack-wrapper]commands_post}
+    {[testenv:build-wrapper]commands_post}
