--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -40,7 +40,7 @@ jobs:
           poetry config warnings.export false
       - name: Generate requirements
         run: |
-          tox run -e pack-wrapper
+          tox run -e build-wrapper
           mv requirements-last-build.txt requirements.txt
       - name: Release charm libraries
         uses: canonical/charming-actions/release-libraries@2.4.0
@@ -51,6 +51,8 @@ jobs:
   build:
     name: Build charm
     uses: canonical/data-platform-workflows/.github/workflows/build_charm_without_cache.yaml@v9.0.2
+    with:
+      charmcraft-snap-channel: beta
 
   release:
     name: Release charm
