--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -12,7 +12,7 @@ parts:
       craftctl default
       if [[ ! -f requirements.txt ]]
       then
-          echo 'ERROR: Use "tox run -e build" instead of calling "charmcraft pack" directly' >&2
+          echo 'ERROR: Use "tox run -e build-dev" instead of calling "charmcraft pack" directly' >&2
           exit 1
       fi
     build-packages:
