Add pgvector extension/plugin

--- a/config.yaml
+++ b/config.yaml
@@ -219,6 +219,10 @@ options:
     default: false
     type: boolean
     description: Enable spi extension.
+  plugin_vector_enable:
+    default: false
+    type: boolean
+    description: Enable pgvector extension
   profile:
    description: |
       Profile representing the scope of deployment, and used to tune resource allocation.
