Add new extensions/plugins

--- a/config.yaml
+++ b/config.yaml
@@ -219,6 +219,82 @@ options:
     default: false
     type: boolean
     description: Enable spi extension.
+  plugin_bool_plperl_enable:
+    default: false
+    type: boolean
+    description: Enable bool_plperl extension.
+  plugin_hll_enable:
+    default: false
+    type: boolean
+    description: Enable hll extension.
+  plugin_hypopg_enable:
+    default: false
+    type: boolean
+    description: Enable hypopg extension.
+  plugin_ip4r_enable:
+    default: false
+    type: boolean
+    description: Enable ip4r extension.
+  plugin_plperl_enable:
+    default: false
+    type: boolean
+    description: Enable plperl extension.
+  plugin_jsonb_plperl_enable:
+    default: false
+    type: boolean
+    description: Enable jsonb_plperl extension.
+  plugin_orafce_enable:
+    default: false
+    type: boolean
+    description: Enable orafce extension.
+  plugin_pg_similarity_enable:
+    default: false
+    type: boolean
+    description: Enable pg_similarity extension.
+  plugin_prefix_enable:
+    default: false
+    type: boolean
+    description: Enable prefix extension.
+  plugin_rdkit_enable:
+    default: false
+    type: boolean
+    description: Enable rdkit extension.
+  plugin_tds_fdw_enable:
+    default: false
+    type: boolean
+    description: Enable tds_fdw extension.
+  plugin_icu_ext_enable:
+    default: false
+    type: boolean
+    description: Enable icu_ext extension.
+  plugin_pltcl_enable:
+    default: false
+    type: boolean
+    description: Enable pltcl extension.
+  plugin_postgis_enable:
+    default: false
+    type: boolean
+    description: Enable postgis extension.
+  plugin_address_standardizer_enable:
+    default: false
+    type: boolean
+    description: Enable address_standardizer extension.
+  plugin_postgis_raster_enable:
+    default: false
+    type: boolean
+    description: Enable postgis_raster extension.
+  plugin_address_standardizer_data_us_enable:
+    default: false
+    type: boolean
+    description: Enable address_standardizer_data_us extension.
+  plugin_postgis_tiger_geocoder_enable:
+    default: false
+    type: boolean
+    description: Enable postgis_tiger_geocoder extension.
+  plugin_postgis_topology_enable:
+    default: false
+    type: boolean
+    description: Enable postgis_topology extension.
   plugin_vector_enable:
     default: false
     type: boolean
