Restore PatroniPostgresqlDown alert rule.

--- a/src/prometheus_alert_rules/patroni_rules.yaml
+++ b/src/prometheus_alert_rules/patroni_rules.yaml
@@ -6,6 +6,15 @@ groups:
 
   rules:
 
+    - alert: PatroniPostgresqlDown
+      expr: "patroni_postgres_running == 0"
+      for: 0m
+      labels:
+        severity: critical
+      annotations:
+        summary: Patroni Posrgresql Down (instance {{ $labels.instance }})
+        description: "Patroni Postgresql instance is down\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+
     # 2.4.1
     - alert: PatroniHasNoLeader
       expr: '(max by (scope) (patroni_master) < 1) and (max by (scope) (patroni_standby_leader) < 1)'
