--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -50,9 +50,7 @@ jobs:
 
   build:
     name: Build charm
-    uses: canonical/data-platform-workflows/.github/workflows/build_charm_without_cache.yaml@v11.0.0
-    with:
-      charmcraft-snap-channel: beta
+    uses: canonical/data-platform-workflows/.github/workflows/build_charm.yaml@v11.0.0
 
   release:
     name: Release charm
@@ -62,7 +60,7 @@ jobs:
     uses: canonical/data-platform-workflows/.github/workflows/release_charm.yaml@v11.0.0
     with:
       channel: 14/edge
-      artifact-name: ${{ needs.build.outputs.artifact-name }}
+      artifact-prefix: ${{ needs.build.outputs.artifact-prefix }}
     secrets:
       charmhub-token: ${{ secrets.CHARMHUB_TOKEN }}
     permissions:
