Fix Allure Report beta
Follow up to #376

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,7 +56,9 @@ jobs:
         juju:
           - agent: 2.9.46
             libjuju: ^2
+            allure: false
           - agent: 3.1.7
+            allure: true
     name: Integration test charm | ${{ matrix.juju.agent }}
     needs:
       - lint
@@ -69,6 +71,7 @@ jobs:
       microk8s-snap-channel: 1.29-strict/stable
       juju-agent-version: ${{ matrix.juju.agent }}
       libjuju-version-constraint: ${{ matrix.juju.libjuju }}
+      _beta_allure_report: ${{ matrix.juju.allure }}
     secrets:
       integration-test: |
         {
