--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -1,11 +1,9 @@
 type: "charm"
 bases:
-  - build-on:
-    - name: "ubuntu"
-      channel: "22.04"
-    run-on:
-    - name: "ubuntu"
-      channel: "22.04"
+  - name: ubuntu
+    channel: "22.04"
+    architectures:
+      - arm64
 parts:
   charm:
     override-pull: |
