--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,7 +45,7 @@ jobs:
 
   build:
     name: Build charm
-    uses: canonical/data-platform-workflows/.github/workflows/build_charm.yaml@fix-base-format
+    uses: canonical/data-platform-workflows/.github/workflows/build_charm.yaml@fix-bases
     with:
       cache: true
 
