Update rock, charm libs and switch away from psycopg2-binary

--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -22,5 +22,13 @@ parts:
       - cargo
       - pkg-config
     charm-strict-dependencies: true
-    charm-binary-python-packages:
-      - psycopg2-binary
+  libpq:
+    build-packages:
+      - libpq-dev
+    plugin: dump
+    source: /usr/lib/
+    source-type: local
+    prime:
+      - lib/
+    organize:
+      "*-linux-gnu/libpq.so*": lib/
