--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -21,6 +21,7 @@ parts:
       - rustc
       - cargo
       - pkg-config
+      - libpq-dev
     charm-strict-dependencies: true
   libpq:
     build-packages:
