--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ jsonschema = "^4.21.1"
 jinja2 = "^3.1.3"
 lightkube = "^0.15.2"
 lightkube-models = "^1.28.1.4"
-psycopg2-binary = "^2.9.9"
+psycopg2 = "^2.9.9"
 
 [tool.poetry.group.charm-libs.dependencies]
 # data_platform_libs/v0/data_interfaces.py
@@ -61,7 +61,6 @@ pydantic = "^1.10.14"
 pytest = "^8.0.2"
 pytest-mock = "^3.12.0"
 pytest-asyncio = "*"
-psycopg2 = {version = "^2.9.9", extras = ["binary"]}
 parameterized = "^0.9.0"
 
 [tool.poetry.group.integration]
@@ -75,7 +74,7 @@ pytest-operator = "^0.33.0"
 pytest-operator-cache = {git = "https://github.com/canonical/data-platform-workflows", tag = "v12.5.0", subdirectory = "python/pytest_plugins/pytest_operator_cache"}
 pytest-operator-groups = {git = "https://github.com/canonical/data-platform-workflows", tag = "v12.5.0", subdirectory = "python/pytest_plugins/pytest_operator_groups"}
 juju = "^3.2.2"
-psycopg2 = {version = "^2.9.9", extras = ["binary"]}
+psycopg2-binary = "^2.9.9"
 boto3 = "^1.34.50"
 tenacity = "^8.2.3"
 allure-pytest = "^2.13.2"
@@ -106,10 +105,12 @@ target-version = ["py38"]
 [tool.ruff]
 # preview and explicit preview are enabled for CPY001
 preview = true
-explicit-preview-rules = true
 target-version = "py38"
 src = ["src", "."]
 line-length = 99
+
+[tool.ruff.lint]
+explicit-preview-rules = true
 select = ["A", "E", "W", "F", "C", "N", "D", "I001", "CPY001"]
 extend-ignore = [
     "D203",
@@ -128,16 +129,16 @@ extend-ignore = [
 # Ignore D107 Missing docstring in __init__
 ignore = ["E501", "D107"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "tests/*" = ["D100", "D101", "D102", "D103", "D104"]
 
-[tool.ruff.flake8-copyright]
+[tool.ruff.lint.flake8-copyright]
 # Check for properly formatted copyright header in each file
 author = "Canonical Ltd."
 notice-rgx = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+"
 
-[tool.ruff.mccabe]
+[tool.ruff.lint.mccabe]
 max-complexity = 10
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "google"
