Switch to ruff fromatter

--- a/tox.ini
+++ b/tox.ini
@@ -41,8 +41,8 @@ commands_pre =
     poetry install --only format --no-root
 commands =
     poetry lock --no-update
-    poetry run ruff --fix {[vars]all_path}
-    poetry run black {[vars]all_path}
+    poetry run ruff check --fix {[vars]all_path}
+    poetry run ruff format {[vars]all_path}
 
 [testenv:lint]
 description = Check code against coding style standards
@@ -54,8 +54,8 @@ commands_pre =
 commands =
     poetry check --lock
     poetry run codespell {[vars]all_path}
-    poetry run ruff {[vars]all_path}
-    poetry run black --check --diff {[vars]all_path}
+    poetry run ruff check {[vars]all_path}
+    poetry run ruff format --check --diff {[vars]all_path}
     find {[vars]all_path} -type f \( -name "*.sh" -o -name "*.bash" \) -exec poetry run shellcheck --color=always \{\} +
 
 [testenv:unit-{juju2, juju3}]
