--- a/tox.ini
+++ b/tox.ini
@@ -87,6 +87,6 @@ commands_pre =
     poetry install --only integration --no-root
     {[testenv:build-wrapper]commands_pre}
 commands =
-    poetry run pytest -v --tb native --log-cli-level=INFO -s --ignore={[vars]tests_path}/unit/ {posargs}
+    poetry run pytest -v --tb native --log-cli-level=INFO -s {[vars]tests_path}/integration/test_trust.py {posargs}
 commands_post =
     {[testenv:build-wrapper]commands_post}
