--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ repository = "https://github.com/canonical/postgresql-k8s-operator"
 python = "^3.10"
 ops = "^2.12.0"
 cryptography = "^42.0.5"
-boto3 = "^1.34.84"
+boto3 = "^1.34.88"
 pgconnstr = "^1.0.1"
 requests = "^2.31.0"
 tenacity = "^8.2.3"
@@ -43,7 +43,7 @@ cosl = "*"
 optional = true
 
 [tool.poetry.group.format.dependencies]
-ruff = "^0.3.7"
+ruff = "^0.4.1"
 
 [tool.poetry.group.lint]
 optional = true
@@ -72,9 +72,10 @@ pytest-github-secrets = {git = "https://github.com/canonical/data-platform-workf
 pytest-operator = "^0.34.0"
 pytest-operator-cache = {git = "https://github.com/canonical/data-platform-workflows", tag = "v13.1.1", subdirectory = "python/pytest_plugins/pytest_operator_cache"}
 pytest-operator-groups = {git = "https://github.com/canonical/data-platform-workflows", tag = "v13.1.1", subdirectory = "python/pytest_plugins/pytest_operator_groups"}
-juju = "^3.2.2"
+# renovate caret doesn't work: https://github.com/renovatebot/renovate/issues/26940
+juju = "<=3.4.0.0"
 psycopg2-binary = "^2.9.9"
-boto3 = "^1.34.84"
+boto3 = "^1.34.88"
 tenacity = "^8.2.3"
 allure-pytest = "^2.13.5"
 
