unify unit test suites

--- a/tox.ini
+++ b/tox.ini
@@ -58,12 +58,10 @@ commands =
     poetry run ruff format --check --diff {[vars]all_path}
     find {[vars]all_path} -type f \( -name "*.sh" -o -name "*.bash" \) -exec poetry run shellcheck --color=always \{\} +
 
-[testenv:unit-{juju2, juju3}]
+[testenv:unit]
 description = Run unit tests
 set_env =
     {[testenv]set_env}
-    juju2: LIBJUJU="2.9.44.1"
-    juju3: LIBJUJU="3.2.0.1"
 commands_pre =
     poetry install --only main,charm-libs,unit --no-root
 commands =
