--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,11 +26,6 @@ jobs:
 
   unit-test:
     name: Unit test charm
-    strategy:
-      matrix:
-        juju-version:
-          - "juju2"
-          - "juju3"
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
@@ -41,7 +36,7 @@ jobs:
           pipx install tox
           pipx install poetry
       - name: Run tests
-        run: tox run -e unit-${{ matrix.juju-version }}
+        run: tox run -e unit
 
   build:
     name: Build charm
