--- a/actions.yaml
+++ b/actions.yaml
@@ -3,6 +3,13 @@
 
 create-backup:
   description: Creates a backup to s3 storage in AWS.
+  params:
+    type:
+      type: string
+      description: The backup type, the default value is 'full'.
+        Full backup is a full copy of all data.
+        Differential backup is a copy only of changed data since the last full backup.
+        Possible values - full, differential.
 get-primary:
   description: Get the unit with is the primary/leader in the replication.
 get-password:
