--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,10 +55,13 @@ jobs:
         juju:
           - agent: 2.9.49  # renovate: latest juju 2
             libjuju: ==2.9.49.0  # renovate: latest libjuju 2
-            allure: false
+            allure_on_amd64: false
           - agent: 3.1.8  # renovate: latest juju 3
-            allure: true
-    name: Integration test charm | ${{ matrix.juju.agent }}
+            allure_on_amd64: true
+        architecture:
+          - amd64
+          - arm64
+    name: Integration test charm | ${{ matrix.juju.agent }} | ${{ matrix.architecture }}
     needs:
       - lint
       - unit-test
@@ -66,11 +69,12 @@ jobs:
     uses: canonical/data-platform-workflows/.github/workflows/integration_test_charm.yaml@v16.0.1
     with:
       artifact-prefix: ${{ needs.build.outputs.artifact-prefix }}
+      architecture: ${{ matrix.architecture }}
       cloud: microk8s
       microk8s-snap-channel: 1.29-strict/stable
       juju-agent-version: ${{ matrix.juju.agent }}
       libjuju-version-constraint: ${{ matrix.juju.libjuju }}
-      _beta_allure_report: ${{ matrix.juju.allure }}
+      _beta_allure_report: ${{ matrix.juju.allure_on_amd64 && matrix.architecture == 'amd64' }}
     secrets:
       integration-test: |
         {
