add incremental backups + name fix

--- a/actions.yaml
+++ b/actions.yaml
@@ -6,10 +6,11 @@ create-backup:
   params:
     type:
       type: string
-      description: The backup type, the default value is 'full'.
+      description: The backup type, the default value is 'FULL'.
         Full backup is a full copy of all data.
         Differential backup is a copy only of changed data since the last full backup.
-        Possible values - full, differential.
+        Incremental backup is a copy only of changed data since the last backup (any type).
+        Possible values - FULL, DIFFERENTIAL, INCREMENTAL.
 get-primary:
   description: Get the unit with is the primary/leader in the replication.
 get-password:
