--- a/actions.yaml
+++ b/actions.yaml
@@ -6,11 +6,11 @@ create-backup:
   params:
     type:
       type: string
-      description: The backup type, the default value is 'FULL'.
+      description: The backup type, the default value is 'full'.
         Full backup is a full copy of all data.
         Differential backup is a copy only of changed data since the last full backup.
         Incremental backup is a copy only of changed data since the last backup (any type).
-        Possible values - FULL, DIFFERENTIAL, INCREMENTAL.
+        Possible values - full, differential, incremental.
 get-primary:
   description: Get the unit with is the primary/leader in the replication.
 get-password:
