Added `timescaledb` plugin/extension

--- a/config.yaml
+++ b/config.yaml
@@ -299,6 +299,10 @@ options:
     default: false
     type: boolean
     description: Enable pgvector extension
+  plugin_timescaledb_enable:
+    default: false
+    type: boolean
+    description: Enable timescaledb extension
   profile:
    description: |
       Profile representing the scope of deployment, and used to tune resource allocation.
