Fix failover and set-secret behaviour
Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

--- a/actions.yaml
+++ b/actions.yaml
@@ -34,7 +34,7 @@ pre-upgrade-check:
 promote-to-primary:
   description: Promotes the cluster of choice to a primary cluster. Must be ran against the leader unit.
   params:
-    force-promotion:
+    force:
       type: boolean
       description: Force the promotion of a cluster when there is already a primary cluster.
 restore:
