[DPE-4464] Add Incremental backup support + proper type naming (#487)
* add incremental backups + name fix

* fix tests

* update naming convention to reflect spec

--- a/actions.yaml
+++ b/actions.yaml
@@ -9,7 +9,8 @@ create-backup:
       description: The backup type, the default value is 'full'.
         Full backup is a full copy of all data.
         Differential backup is a copy only of changed data since the last full backup.
-        Possible values - full, differential.
+        Incremental backup is a copy only of changed data since the last backup (any type).
+        Possible values - full, differential, incremental.
 get-primary:
   description: Get the unit with is the primary/leader in the replication.
 get-password:
