Add experimental max_connections config

--- a/config.yaml
+++ b/config.yaml
@@ -406,3 +406,7 @@ options:
       Allowed values are: from 0 to 2000000000.
     type: int
     default: 150000000
+  experimental_max_connections:
+    type: int
+    description: |
+      [EXPERIMENTAL] Force set max_connections.
