--- a/tox.ini
+++ b/tox.ini
@@ -68,6 +68,7 @@ commands =
     poetry run coverage run --source={[vars]src_path} \
         -m pytest -v --tb native -s {posargs} {[vars]tests_path}/unit
     poetry run coverage report
+    poetry run coverage xml
 
 [testenv:integration]
 description = Run integration tests
