--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,7 +60,11 @@ jobs:
             allure_on_amd64: true
         architecture:
           - amd64
-          - arm64
+        include:
+          - juju:
+              agent: 3.1.8  # renovate: latest juju 3
+              allure_on_amd64: true
+            architecture: arm64
     name: Integration test charm | ${{ matrix.juju.agent }} | ${{ matrix.architecture }}
     needs:
       - lint
