--- a/actions.yaml
+++ b/actions.yaml
@@ -45,6 +45,9 @@ restore:
     backup-id:
       type: string
       description: A backup-id to identify the backup to restore (format = %Y-%m-%dT%H:%M:%SZ)
+    restore-to-time:
+      type: string
+      description: Point-in-time-recovery target in PSQL format.
 resume-upgrade:
   description: Resume a rolling upgrade after asserting successful upgrade of a new revision.
 set-password:
