Suppress oversee users

--- a/actions.yaml
+++ b/actions.yaml
@@ -64,3 +64,5 @@ set-tls-private-key:
     private-key:
       type: string
       description: The content of private key for communications with clients. Content will be auto-generated if this option is not specified.
+reenable-oversee-users:
+  description: Reenable purging of managed credentials after a standby cluster is promoted.
