Enforce Juju versions
Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -83,3 +83,13 @@ storage:
 
 assumes:
   - k8s-api
+  - any-of:
+      - all-of:
+          - juju >= 2.9.49
+          - juju < 3
+      - all-of:
+          - juju >= 3.4.3
+          - juju < 3.5
+      - all-of:
+          - juju >= 3.5.2
+          - juju < 4
