Ignore debug calls

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,6 +86,9 @@ branch = true
 
 [tool.coverage.report]
 show_missing = true
+exclude_lines = [
+    "logger\\.debug"
+]
 
 [tool.pytest.ini_options]
 minversion = "6.0"
