[DPE-5116] Add pgAudit (#688)
* Add pgAudit

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Fix extensions enablement on database request

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Make pgAudit work and add integration test

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Split integration tests

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Fix integration test

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Add unit tests

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Enable pgAudit by default

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Fix test_no_password_exposed_on_logs

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Enable/disable the plugin at the unit test

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

---------

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

--- a/config.yaml
+++ b/config.yaml
@@ -303,6 +303,10 @@ options:
     default: false
     type: boolean
     description: Enable timescaledb extension
+  plugin_audit_enable:
+    default: true
+    type: boolean
+    description: Enable pgAudit extension
   profile:
    description: |
       Profile representing the scope of deployment, and used to tune resource allocation.
