Fix logging call prefix and ignore lib and tests folders
Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

--- a/vex.toml
+++ b/vex.toml
@@ -2,7 +2,7 @@
 version = "1"
 
 [files]
-ignore = [ "vex.toml", "vexes/", ".git/", ".gitignore", ".idea/", "venv/" ]
+ignore = [ "vex.toml", "vexes/", ".git/", ".gitignore", ".idea/", "lib/", "tests/", "venv/" ]
 
 [python]
 use-for = [ "*.star" ]
